package io.github.uoyeng1g6.constants;

/** The different categories of activity */
public enum ActivityType {
    MEAL,
    STUDY,
    RECREATION
}
